# master-rad

./: .gitignore  README.md
submodules/lexertk/: lexertk.hpp
text_editor/: CMakeLists.txt  File.cpp  File.h  main.cpp
text_editor/CodeFolding/: CodeBlock.cpp  CodeBlock.h
text_editor/CodeSnippets/: SnippetManager.cpp  SnippetManager.h
text_editor/GUI/: Cursor.cpp  Cursor.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Language.h  LanguageManager.cpp  LanguageManager.h  LanguageMode.h  LineBuffer.cpp  LineBuffer.h  MyRectangle.cpp  MyRectangle.h  Scroll.cpp  Scroll.h  Selection.cpp  Selection.h  TextBox.cpp  TextBox.h  TextCoordinates.cpp  TextCoordinates.h  TextEditor.cpp  TextEditor.h  TextHighlighter.cpp  TextHighlighter.h  TextPosition.cpp  TextPosition.h  Theme.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h  ThemeName.h
text_editor/Input/: InputHandler.cpp  InputHandler.h
text_editor/PieceTable/: ActionDescriptor.cpp  ActionDescriptor.h  DeleteBuffer.cpp  DeleteBuffer.h  InsertBuffer.cpp  InsertBuffer.h  PieceDescriptor.cpp  PieceDescriptor.h  PieceTable.cpp  PieceTable.h  PieceTableInstance.cpp  PieceTableInstance.h  SourceType.h
text_editor/Snippets/: swap.txt
text_editor/SyntaxHiglighting/: Language.cpp  LanguageManager.cpp  LanguageManager.h  TextHighlighter.cpp  TextHighlighter.h
